--- a/src/container/Home/Home.css
+++ b/src/container/Home/Home.css
@@ -17,7 +17,12 @@
   background-color: #F24F8A !important;
   border-color: #F24F8A !important;
   transition: 0.5s;
-  }
+}
+.btn-secondary:hover{
+  background-color: rgb(182, 28, 85) !important;
+  border-color: rgb(182, 28, 85) !important;
+  transition: 0.5s;
+}
 /* PINK */
 .btn-danger{
   background-color: #F24F8A !important;
@@ -72,8 +77,8 @@
   transition: 0.5s;
 }
 .btn-info:hover{
-  background-color: rgb(47, 154, 163);
-  border-color: rgb(47, 154, 163) !important;
+  background-color: rgb(135, 97, 163);
+  border-color: rgb(135, 97, 163) !important;
   color: white;
   transition: 0.5s;
 }
