--- a/src/container/pages/Cart/Cart.css
+++ b/src/container/pages/Cart/Cart.css
@@ -61,6 +61,8 @@
 .card-cart{
 }
 .card-cart .added{
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   cursor: pointer;
   background: rgba(0, 0, 0, 0.349);
   transition: 0.5s;
@@ -75,6 +77,8 @@
   font-size: 50px;
 }
 .card-cart .add{
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   cursor: pointer;
   opacity: 0;
   transition: 0.5s;
